[gd_scene load_steps=3 format=3 uid="uid://cpndr5dewgvpx"]

[ext_resource type="Script" path="res://src/menu/MenuUpgrade.gd" id="1_53xog"]
[ext_resource type="Theme" uid="uid://dcvufg8c2ac10" path="res://assets/default_theme.tres" id="2_0ak65"]

[node name="MenuBuy" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_53xog")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.501961)

[node name="ButtonList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 200.0
offset_right = 784.0
offset_bottom = 436.0

[node name="ButtonBuyPower" type="Button" parent="ButtonList"]
layout_mode = 2
theme = ExtResource("2_0ak65")
text = "攻撃力 Lv%d > Lv%d($%d)"

[node name="ButtonBuyRange" type="Button" parent="ButtonList"]
layout_mode = 2
theme = ExtResource("2_0ak65")
text = "射程範囲 Lv%d > Lv%d ($%d)"

[node name="ButtonBuyFirerate" type="Button" parent="ButtonList"]
layout_mode = 2
theme = ExtResource("2_0ak65")
text = "発射間隔 Lv%d > Lv%d ($%d)"

[node name="HSeparator" type="HSeparator" parent="ButtonList"]
layout_mode = 2

[node name="ButtonCancel" type="Button" parent="ButtonList"]
layout_mode = 2
theme = ExtResource("2_0ak65")
text = "キャンセル"

[connection signal="pressed" from="ButtonList/ButtonBuyPower" to="." method="_on_button_buy_power_pressed"]
[connection signal="pressed" from="ButtonList/ButtonBuyRange" to="." method="_on_button_buy_range_pressed"]
[connection signal="pressed" from="ButtonList/ButtonBuyFirerate" to="." method="_on_button_buy_firerate_pressed"]
[connection signal="pressed" from="ButtonList/ButtonCancel" to="." method="_on_button_cancel_pressed"]
